[package]
name = "firework_engineer"
version = "0.1.0"
authors = ["James Fator <jamesfator@gmail.com>"]
edition = "2021"

[dependencies]
time = "0.3.5"
uuid = { version = "0.8.2", features = ["v4"] }
rand = "0.8.4"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["gfx"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
